--- a/views/help.tt
+++ b/views/help.tt
@@ -126,7 +126,7 @@ required).</p> <p>The <em>ID of the record</em> can be accessed using the
 special short name &quot;_id&quot;.</p> <p>The <em>user that last updated the
 record</em> can be accessed using the special short name
 &quot;_version_user&quot;, which will be returned as a table with the keys:
-firstname, surname, email, telephone, organisation and text. The organisation
+firstname, surname, email, organisation and text. The organisation
 will be returned with the keys id and name.
 
 <h5>Return values</h5>
