Fix handling of unicode chars in filters

--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -211,7 +211,7 @@
             </script>
         [% END %]
         [% IF page == "edit" OR page == "bulk" OR page == "approval" OR page == "view" OR page == "layout" OR (page == "data" AND viewtype == "timeline") %]
-            <script type="text/javascript" src="[% url.js %]/base64decode.js"></script>
+            <script type="text/javascript" src="[% url.js %]/base64.min.js"></script>
         [% END %]
         [% IF page == "login" %]
             <!--[if (gte IE 6)&(lte IE 8)]>
