--- a/views/view.tt
+++ b/views/view.tt
@@ -141,7 +141,7 @@
         }); 
         [% INCLUDE builder.tt filter_normal = v.filter filter_base64 = v.filter.base64 %]
         [% IF v.filter.as_json AND NOT v.filter.as_json.match('^[{}\s]*$') %]
-            var data = decodeBase64('[% v.filter.base64 %]');
+            var data = base64.decode('[% v.filter.base64 %]');
             $('#builder').queryBuilder('setRules',
                 JSON.parse(data)
             );
