--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -235,7 +235,7 @@ nav .dropdown-toggle {
     padding: 0;
 }
 
-.crumbs-and-search {
+.crumbs-container {
     margin-bottom: .5em;
 }
 
@@ -248,12 +248,18 @@ nav .dropdown-toggle {
     padding: .4em .5em;
 }
 
+.quicksearch-container {
+    margin: -1em;
+}
+
 .quicksearch label {
     font-weight: normal;
 }
 
 .quicksearch input {
-    width: 84%;
+    width: 70%;
+    display: inline-block;
+    height: 28px;
 }
 
 .quicksearch button {
@@ -262,7 +268,7 @@ nav .dropdown-toggle {
 }
 
 .breadcrumbs {
-    padding: 1.5em .5em;
+    padding: .5em;
 }
 
 .breadcrumbs .items {
