--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -250,6 +250,7 @@ nav .dropdown-toggle {
 
 .quicksearch-container {
     margin: -1em;
+    padding-right: 0; // line up with crumbs
 }
 
 .quicksearch label {
