--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -18,6 +18,8 @@
   display: block;
   clear: both; }
 
+/***** BREAKPOINTS *****/
+/***********************/
 .nav > li.disabled > a {
   color: #999999; }
 
@@ -311,6 +313,20 @@ nav button .heading {
   background-color: #fff;
   z-index: 2; }
 
+@media screen and (max-width: 80em) {
+  .quicksearch input {
+    width: 66%; } }
+@media screen and (max-width: 66em) {
+  .quicksearch-container {
+    margin-top: auto;
+    padding: auto;
+    margin: 0;
+    margin-bottom: 1em;
+    padding-left: 15px;
+    padding-right: 15px; }
+
+  header .navbar-default {
+    margin-left: 1em; } }
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 @font-face {
   font-family: 'Open Sans remote';
