--- a/views/layout.tt
+++ b/views/layout.tt
@@ -750,7 +750,7 @@ available permissions are detailed in the <a href="[% url.page %]/user/">Users m
                 [% PROCESS builder.tt builder_id = instance.layout.instance_id layout = instance.layout filter_normal = column.filter filter_base64 = column.filter.base64 %]
             [% END %]
             [% IF column.filter.as_json AND NOT column.filter.as_json.match('^[{}\s]*$') %]
-                var data = decodeBase64('[% column.filter.base64 %]');
+                var data = base64.decode('[% column.filter.base64 %]');
                 $('#builder[% column.refers_to_instance_id %]').queryBuilder('setRules',
                     JSON.parse(data)
                 );
