--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1429,6 +1429,13 @@ small.search_term {
   background-color: rgba(137, 30, 136, 0.3); }
 
 /* Data table */
+.table-rows-pagination {
+  text-align: right; }
+
+.table-rows-pagination form,
+.table-rows-pagination .table-pagination {
+  display: inline-block; }
+
 #data-table th * {
   color: #000; }
 
