--- a/views/layout.tt
+++ b/views/layout.tt
@@ -4,48 +4,42 @@
 [% PROCESS snippets/layout_modals.tt %]
 
 [% BLOCK field_properties %]
-    <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
-        <section id="properties">
-            <h3>Properties</h3>
+    <h3>Properties</h3>
 
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" class="form-control" id="name" name="name" value="[% column.name | html_entity %]">
-            </div>
-            [% UNLESS column.id %]
-                <div class="form-group">
-                    <label for="type">Type:</label>
-                    <select class="form-control" id="type" name="type">
-                        <option value="string"      [% IF column.type == "string" %]selected    [% END %]>Text</option>
-                        <option value="intgr"       [% IF column.type == "intgr" %]selected     [% END %]>Integer</option>
-                        <option value="date"        [% IF column.type == "date" %]selected      [% END %]>Date</option>
-                        <option value="daterange"   [% IF column.type == "daterange" %]selected [% END %]>Date range</option>
-                        <option value="enum"        [% IF column.type == "enum" %]selected      [% END %]>Dropdown list</option>
-                        <option value="tree"        [% IF column.type == "tree" %]selected      [% END %]>Tree</option>
-                        <option value="file"        [% IF column.type == "file" %]selected      [% END %]>Document</option>
-                        <option value="person"      [% IF column.type == "person" %]selected    [% END %]>Person</option>
-                        <option value="rag"         [% IF column.type == "rag" %]selected       [% END %]>RedAmberGreen status (RAG)</option>
-                        <option value="calc"        [% IF column.type == "calc" %]selected      [% END %]>Calculated value</option>
-                        <option value="curval"      [% IF column.type == "curval" %]selected    [% END %]>Field(s) for records from another table</option>
-                        <option value="autocur"     [% IF column.type == "autocur" %]selected   [% END %]>Automatic value of other sheet's references to this one</option>
-                    </select>
-                </div>
-            [% END %]
+    <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" class="form-control" id="name" name="name" value="[% column.name | html_entity %]">
+    </div>
+    [% UNLESS column.id %]
+        <div class="form-group">
+            <label for="type">Type:</label>
+            <select class="form-control" id="type" name="type">
+                <option value="string"      [% IF column.type == "string" %]selected    [% END %]>Text</option>
+                <option value="intgr"       [% IF column.type == "intgr" %]selected     [% END %]>Integer</option>
+                <option value="date"        [% IF column.type == "date" %]selected      [% END %]>Date</option>
+                <option value="daterange"   [% IF column.type == "daterange" %]selected [% END %]>Date range</option>
+                <option value="enum"        [% IF column.type == "enum" %]selected      [% END %]>Dropdown list</option>
+                <option value="tree"        [% IF column.type == "tree" %]selected      [% END %]>Tree</option>
+                <option value="file"        [% IF column.type == "file" %]selected      [% END %]>Document</option>
+                <option value="person"      [% IF column.type == "person" %]selected    [% END %]>Person</option>
+                <option value="rag"         [% IF column.type == "rag" %]selected       [% END %]>RedAmberGreen status (RAG)</option>
+                <option value="calc"        [% IF column.type == "calc" %]selected      [% END %]>Calculated value</option>
+                <option value="curval"      [% IF column.type == "curval" %]selected    [% END %]>Field(s) for records from another table</option>
+                <option value="autocur"     [% IF column.type == "autocur" %]selected   [% END %]>Automatic value of other sheet's references to this one</option>
+            </select>
+        </div>
+    [% END %]
 
-            [% PROCESS field_type_properties %]
+    [% PROCESS field_type_properties %]
 
-            <div class="form-group">
-                <label for="description">Description:</label>
-                <input type="text" class="form-control" id="description" name="description" value="[% column.description | html_entity %]">
-            </div>
-            <div class="form-group">
-                <label for="helptext">Help text for the user:</label>
-                <textarea class="form-control" rows="5" id="helptext" name="helptext">[% column.helptext | html_entity %]</textarea>
-            </div>
-        </section>
-
-        [% PROCESS advanced_field_settings %]
-   </div>
+    <div class="form-group">
+        <label for="description">Description:</label>
+        <input type="text" class="form-control" id="description" name="description" value="[% column.description | html_entity %]">
+    </div>
+    <div class="form-group">
+        <label for="helptext">Help text for the user:</label>
+        <textarea class="form-control" rows="5" id="helptext" name="helptext">[% column.helptext | html_entity %]</textarea>
+    </div>
 [% END %]
 
 [% BLOCK advanced_field_settings %]
@@ -422,11 +416,39 @@
     </div>
 [% END %]
 
-
 [% BLOCK edit_field %]
     <h2>[% IF column.id %]Edit field[% ELSE %]Add a field to [% instance_name | html %][% END %]</h2>
 
-    [% PROCESS field_properties %]
+    <div class="tab-interface">
+        <ul role="tablist">
+            <li role="presentation">
+                <a role="tab" href="#basic" id="basic-tab" aria-selected="true">Basic settings</a>
+            </li>
+            <li role="presentation">
+                <a role="tab" href="#advanced" id="advanced-tab">Advanced settings</a>
+            </li>
+            <li role="presentation">
+                <a role="tab" href="#display" id="display-tab">Display conditions</a>
+            </li>
+            <li role="presentation">
+                <a role="tab" href="#permissions" id="permissions-tab">Permissions</a>
+            </li>
+        </ul>
+
+        <section role="tabpanel" id="basic" aria-labelledby="basic-tab">
+            [% PROCESS field_properties %]
+        </section>
+
+        <section role="tabpanel" id="advanced" aria-labelledby="advanced-tab">
+        </section>
+
+        <section role="tabpanel" id="display" aria-labelledby="display-tab">
+        </section>
+
+        <section role="tabpanel" id="permissions" aria-labelledby="permissions-tab">
+        </section>
+    </div>
+
 [% END %]
 
 [% BLOCK list_fields %]
