Tab mouse and keyboard navigation

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1463,6 +1463,9 @@ small.search_term {
 .tab-interface [role="tablist"] li:not(:first-child) {
   margin-left: 1em; }
 
+.tab-interface [role="tablist"] li:last-child [role="tab"][aria-selected="true"] {
+  padding-bottom: 1.04em; }
+
 .tab-interface [role="tab"] {
   padding: 1em;
   border: 2px solid #1460aa;
@@ -1471,7 +1474,7 @@ small.search_term {
   top: 2px;
   border-bottom: 0; }
 
-.tab-interface [role="tab"][aria-selected] {
+.tab-interface [role="tab"][aria-selected="true"] {
   background-color: #fff; }
 
 .tab-interface [role="tab"]:focus,
@@ -1480,7 +1483,11 @@ small.search_term {
 
 .tab-interface [role="tabpanel"] {
   border: 2px solid #1460aa;
-  padding: 1em; }
+  padding: 1em;
+  display: none; }
+
+.tab-interface [role="tabpanel"].active {
+  display: block; }
 
 #manage-fields {
   border-bottom: 1px solid #bbb;
