--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1271,6 +1271,10 @@ small.search_term {
     margin-left: 1em;
 }
 
+.tab-interface [role="tablist"] li:last-child [role="tab"][aria-selected="true"] {
+    padding-bottom: 1.04em;
+}
+
 .tab-interface [role="tab"] {
     padding: 1em;
     border: 2px solid $primary-navy;
@@ -1280,7 +1284,7 @@ small.search_term {
     border-bottom: 0;
 }
 
-.tab-interface [role="tab"][aria-selected] {
+.tab-interface [role="tab"][aria-selected="true"] {
     background-color: #fff;
 }
 
@@ -1292,6 +1296,11 @@ small.search_term {
 .tab-interface [role="tabpanel"] {
     border: 2px solid $primary-navy;
     padding: 1em;
+    display: none;
+}
+
+.tab-interface [role="tabpanel"].active {
+    display: block;
 }
 
 #manage-fields {
