Working tabpanel layout

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1463,9 +1463,6 @@ small.search_term {
 .tab-interface [role="tablist"] li:not(:first-child) {
   margin-left: 1em; }
 
-.tab-interface [role="tablist"] li:last-child [role="tab"][aria-selected="true"] {
-  padding-bottom: 1.04em; }
-
 .tab-interface [role="tab"] {
   padding: 1em;
   border: 2px solid #1460aa;
@@ -1473,6 +1470,9 @@ small.search_term {
   position: relative;
   top: 2px;
   border-bottom: 0; }
+
+.tab-interface [role="tab"][aria-selected="false"] {
+  border: 0; }
 
 .tab-interface [role="tab"][aria-selected="true"] {
   background-color: #fff; }
@@ -1488,6 +1488,9 @@ small.search_term {
 
 .tab-interface [role="tabpanel"].active {
   display: block; }
+
+.tab-interface [role="tabpanel"] h3:first-child {
+  margin: .5em 0 1em 0; }
 
 #manage-fields {
   border-bottom: 1px solid #bbb;
@@ -1545,7 +1548,6 @@ small.search_term {
 #manage-fields #advanced-field-settings h3,
 #manage-fields h4 {
   display: inline-block;
-  border-bottom: 1px solid #bbb;
   padding-bottom: .5em; }
 
 #manage-fields .permission.write-new .permission,
