--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1475,11 +1475,14 @@ small.search_term {
   border: 0; }
 
 .tab-interface [role="tab"][aria-selected="true"] {
-  background-color: #fff; }
+  background-color: #fff;
+  font-weight: bold; }
 
 .tab-interface [role="tab"]:focus,
 .tab-interface [role="tab"]:hover {
-  background-color: #99ccff; }
+  font-weight: bold;
+  text-decoration: dashed underline black;
+  outline: 0; }
 
 .tab-interface [role="tabpanel"] {
   border: 2px solid #1460aa;
