--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -20,6 +20,19 @@
 
 [% PROCESS rag_legend IF has_rag_column %]
 
+[% IF !config.gads.legacy_menu && search %]
+    <div class="row search-results">
+        <h1 class="col-md-12">
+            Search results <small class="search_term">for term "[% search | html_entity %]" ([% count %] results)</small>
+            <form id="clear_search" action="/data" method="post">
+                <button type="submit" name="clear_search" value="clear_search" class="btn btn-default">
+                Clear <span class="visually-hidden">search results</span>
+                </button>
+            </form>
+        </h1>
+    </div>
+[% END %]
+
 <div class="hscroll">
 <table class="table table-striped" id="data-table">
     <thead>
