Don't bold the hovered / focused tab

--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1290,8 +1290,7 @@ small.search_term {
 
 .tab-interface [role="tab"]:focus,
 .tab-interface [role="tab"]:hover {
-    font-weight: bold;
-    text-decoration: dashed underline black;
+    text-decoration: solid underline black;
     outline: 0;
 }
 
